--- a/index.html
+++ b/index.html
@@ -39,33 +39,25 @@
 					  <HR>
 
 						<div class="codrops-header">
-					<h1>BIONICA SHOE DESIGN<span>The night is young and already begun</span></h1>
+					<h1>BIONICA SHOES DESIGN<span>REINVENT YOURSELF</span></h1>
 				</div>
 			</div>
 			<!-- Related demos -->
 			<section class="related">
-				<p>COLECCION VERANO 2016</p>
+				<p></p>
 				<a href="">
-					<img src="img/lagerfeld 2.jpg"/>
-					<h3>BIONIC#105B</h3>
+					<img src="img/lagerfeld 2.png"/>
+					<h3><iframe src="https://player.vimeo.com/video/153149906" width="890" height="500" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/153149906"></a>.</p></h3>
 				</a>
-				<a href=>
-					<img src= "img/lagerfeld.jpg"/>
-					<h3>BIONIC#106B</h3>
-				</a>
+				
 
 
-				<a href="">
-					<img src="img/lagerfeld.jpg"/>
-					<h3>BIONIC#107B</h3>
-				</a>
-				<a href=>
-					<img src= "img/lagerfeld 2.jpg"/>
-					<h3>BIONIC#108C</h3>
-				</a>
-
+			
+			
+			
 			</section>
-			<p class="ref">Image credits: karl Lagerfeld.com</p>
+			<p class="ref"> HOUSEOFBIONIC.COM</p>
 		</div><!-- /container -->
 		<script src="js/TweenLite.min.js"></script>
 		<script src="js/EasePack.min.js"></script>
